--- a/src/components/blocks/StructuredBlocks.css
+++ b/src/components/blocks/StructuredBlocks.css
@@ -38,7 +38,7 @@
 }
 
 .cei-chart-wrapper {
-  height: 240px;
+  height: 280px;
   min-width: 0;
 }
 
